--- a/Share Beauty App/Views/IdealProductView.xib
+++ b/Share Beauty App/Views/IdealProductView.xib
@@ -9,6 +9,17 @@
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="Reader-Bold.otf">
+            <string>Reader-Bold</string>
+        </array>
+        <array key="Reader-Medium.otf">
+            <string>Reader-Medium</string>
+        </array>
+        <array key="Reader-Regular.otf">
+            <string>Reader</string>
+        </array>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -20,35 +31,35 @@
                     <rect key="frame" x="0.0" y="0.0" width="303" height="460"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BAS-eQ-k8d">
-                            <rect key="frame" x="0.0" y="0.0" width="303" height="153"/>
+                            <rect key="frame" x="0.0" y="0.0" width="303" height="150"/>
                             <subviews>
                                 <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Benefiance NutriPerfect" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HzW-1N-Jgx">
-                                    <rect key="frame" x="10" y="10" width="283" height="21"/>
-                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <rect key="frame" x="10" y="10" width="283" height="18"/>
+                                    <fontDescription key="fontDescription" name="Reader-Bold" family="Reader" pointSize="18"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fDC-at-9aE">
-                                    <rect key="frame" x="10" y="51" width="283" height="17"/>
-                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
+                                    <rect key="frame" x="10" y="48" width="283" height="17"/>
+                                    <fontDescription key="fontDescription" name="Reader-Bold" family="Reader" pointSize="17"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="7" translatesAutoresizingMaskIntoConstraints="NO" id="Gdu-6z-I5j">
-                                    <rect key="frame" x="10" y="88" width="283" height="17"/>
-                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                    <rect key="frame" x="10" y="85" width="283" height="17"/>
+                                    <fontDescription key="fontDescription" name="Reader" family="Reader" pointSize="17"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NLp-H9-IRc">
-                                    <rect key="frame" x="144" y="125" width="15" height="18"/>
+                                    <rect key="frame" x="144" y="122" width="15" height="18"/>
                                     <state key="normal" backgroundImage="open_line_detail"/>
                                     <connections>
                                         <action selector="openLine:" destination="epM-rb-Z6n" eventType="touchUpInside" id="GcO-xk-0hP"/>
                                     </connections>
                                 </button>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b7G-Yb-bgF">
-                                    <rect key="frame" x="144" y="125" width="15" height="18"/>
+                                    <rect key="frame" x="144" y="122" width="15" height="18"/>
                                     <state key="normal" backgroundImage="close_line_detail"/>
                                     <connections>
                                         <action selector="closeLine:" destination="epM-rb-Z6n" eventType="touchUpInside" id="J0N-EK-Oco"/>
@@ -96,7 +107,7 @@
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalCompressionResistancePriority="751" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="zVN-Od-54A">
                                                     <rect key="frame" x="141" y="0.0" width="0.0" height="28"/>
-                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="14"/>
+                                                    <fontDescription key="fontDescription" name="Reader-Medium" family="Reader" pointSize="17"/>
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
@@ -281,12 +292,12 @@
                                                             <rect key="frame" x="0.0" y="0.0" width="261" height="0.0"/>
                                                             <subviews>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" verticalCompressionResistancePriority="751" text="" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jvw-xR-I8h">
-                                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
+                                                                    <fontDescription key="fontDescription" name="Reader-Medium" family="Reader" pointSize="17"/>
                                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="clip" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="0.25" translatesAutoresizingMaskIntoConstraints="NO" id="Vik-1L-6Jy">
-                                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="22"/>
+                                                                    <fontDescription key="fontDescription" name="Reader-Medium" family="Reader" pointSize="17"/>
                                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
@@ -359,7 +370,7 @@
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="38.5" id="jSA-Bp-u5H"/>
                                             </constraints>
-                                            <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="8"/>
+                                            <fontDescription key="fontDescription" name="Reader" family="Reader" pointSize="17"/>
                                             <state key="normal">
                                                 <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             </state>
@@ -383,7 +394,7 @@
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="38.5" id="rz7-97-hk2"/>
                                             </constraints>
-                                            <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="8"/>
+                                            <fontDescription key="fontDescription" name="Reader-Medium" family="Reader" pointSize="17"/>
                                             <state key="normal">
                                                 <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             </state>
@@ -407,7 +418,7 @@
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="38.5" id="5rf-0U-Dtp"/>
                                             </constraints>
-                                            <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="8"/>
+                                            <fontDescription key="fontDescription" name="Reader" family="Reader" pointSize="17"/>
                                             <state key="normal">
                                                 <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             </state>
@@ -428,7 +439,7 @@
                                         <button opaque="NO" tag="3" contentMode="scaleToFill" verticalHuggingPriority="255" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mqs-1O-3mW" customClass="BaseButton" customModule="Share_Beauty_App" customModuleProvider="target">
                                             <rect key="frame" x="146.5" y="53.5" width="136.5" height="43.5"/>
                                             <color key="backgroundColor" red="0.66666666666666663" green="0.66666666666666663" blue="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                            <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="8"/>
+                                            <fontDescription key="fontDescription" name="Reader-Medium" family="Reader" pointSize="20"/>
                                             <state key="normal">
                                                 <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             </state>
