--- a/Share Beauty App/Base.lproj/IdealFirstSelectViewController.storyboard
+++ b/Share Beauty App/Base.lproj/IdealFirstSelectViewController.storyboard
@@ -11,6 +11,11 @@
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="Reader-Bold.otf">
+            <string>Reader-Bold</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--Ideal First Select View Controller-->
         <scene sceneID="Z5A-sE-g32">
@@ -77,11 +82,11 @@
                                 <rect key="frame" x="0.0" y="0.0" width="1024" height="80"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IkP-C9-FBx">
-                                        <rect key="frame" x="353.5" y="10" width="317.5" height="60"/>
+                                        <rect key="frame" x="336" y="10" width="352.5" height="60"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tell me about your ideal skin" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BiW-CD-ixt">
-                                                <rect key="frame" x="0.0" y="15" width="317.5" height="30"/>
-                                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="25"/>
+                                                <rect key="frame" x="0.0" y="17.5" width="352.5" height="25"/>
+                                                <fontDescription key="fontDescription" name="Reader-Bold" family="Reader" pointSize="25"/>
                                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
