--- a/Share Beauty App/Views/EfficacyResultView.xib
+++ b/Share Beauty App/Views/EfficacyResultView.xib
@@ -1,13 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="ipad9_7" orientation="landscape">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="Reader-Bold.otf">
+            <string>Reader-Bold</string>
+        </array>
+        <array key="Reader-Regular.otf">
+            <string>Reader</string>
+        </array>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -19,35 +27,35 @@
                     <rect key="frame" x="0.0" y="0.0" width="1024" height="470"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7XS-DI-EjM">
-                            <rect key="frame" x="0.0" y="0.0" width="1024" height="448.5"/>
+                            <rect key="frame" x="0.0" y="0.0" width="1024" height="436"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uQf-f1-GA3">
-                                    <rect key="frame" x="29" y="30" width="49" height="28"/>
-                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="23"/>
+                                    <rect key="frame" x="29" y="30" width="36" height="17"/>
+                                    <fontDescription key="fontDescription" name="Reader-Bold" family="Reader" pointSize="17"/>
                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="utm_line.png" translatesAutoresizingMaskIntoConstraints="NO" id="Y31-tK-yhZ">
-                                    <rect key="frame" x="138" y="25" width="1" height="35"/>
+                                    <rect key="frame" x="125" y="25" width="1" height="35"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="35" id="KK8-GO-BED"/>
                                         <constraint firstAttribute="width" constant="1" id="UYt-Pc-MSl"/>
                                     </constraints>
                                 </imageView>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3h3-96-CHH">
-                                    <rect key="frame" x="169" y="34" width="42" height="21"/>
-                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <rect key="frame" x="156" y="30" width="43" height="17"/>
+                                    <fontDescription key="fontDescription" name="Reader" family="Reader" pointSize="17"/>
                                     <color key="textColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ASR-7Y-Lxq">
-                                    <rect key="frame" x="491" y="88" width="42" height="21"/>
-                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <rect key="frame" x="490.5" y="77" width="43" height="17"/>
+                                    <fontDescription key="fontDescription" name="Reader" family="Reader" pointSize="17"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zVw-CP-06D">
-                                    <rect key="frame" x="355" y="124" width="314" height="205"/>
+                                    <rect key="frame" x="355" y="109" width="314" height="205"/>
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="mQf-Po-Lfi">
                                             <rect key="frame" x="0.0" y="0.0" width="314" height="205"/>
@@ -71,7 +79,7 @@
                                     </constraints>
                                 </view>
                                 <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="0fH-sM-muV">
-                                    <rect key="frame" x="269" y="344" width="487" height="31"/>
+                                    <rect key="frame" x="269" y="329" width="487" height="31"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="483" id="1iJ-Hm-ajh"/>
                                     </constraints>
@@ -80,8 +88,8 @@
                                     </connections>
                                 </slider>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IRP-Ld-7Q7">
-                                    <rect key="frame" x="30" y="424" width="32" height="14.5"/>
-                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="12"/>
+                                    <rect key="frame" x="30" y="409" width="43" height="17"/>
+                                    <fontDescription key="fontDescription" name="Reader" family="Reader" pointSize="17"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
@@ -106,26 +114,26 @@
                             </constraints>
                         </view>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="efficacy_triangle.png" translatesAutoresizingMaskIntoConstraints="NO" id="sz2-ZX-deq" userLabel="Before Image">
-                            <rect key="frame" x="275" y="376" width="8" height="10"/>
+                            <rect key="frame" x="275" y="361" width="8" height="10"/>
                         </imageView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TQJ-aN-OjZ" userLabel="Before Label">
-                            <rect key="frame" x="239" y="391" width="80" height="21"/>
+                            <rect key="frame" x="239" y="376" width="80" height="17"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="80" id="nld-cD-CoC"/>
                             </constraints>
-                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <fontDescription key="fontDescription" name="Reader" family="Reader" pointSize="17"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="efficacy_triangle.png" translatesAutoresizingMaskIntoConstraints="NO" id="lOB-PL-vMO" userLabel="After Image">
-                            <rect key="frame" x="742" y="376" width="8" height="10"/>
+                            <rect key="frame" x="742" y="361" width="8" height="10"/>
                         </imageView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="w0c-Nl-87a" userLabel="After Label">
-                            <rect key="frame" x="699" y="391" width="95" height="21"/>
+                            <rect key="frame" x="699" y="376" width="95" height="17"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="95" id="bk9-5i-siF"/>
                             </constraints>
-                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <fontDescription key="fontDescription" name="Reader" family="Reader" pointSize="17"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
