--- a/Share Beauty App/Views/SideBar.xib
+++ b/Share Beauty App/Views/SideBar.xib
@@ -1,15 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="Reader-Regular.otf">
+            <string>Reader</string>
+        </array>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SideBar" customModule="Share_Beauty_App" customModuleProvider="target">
             <connections>
@@ -40,17 +45,17 @@
                             </constraints>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dmE-X6-mur">
-                            <rect key="frame" x="0.0" y="731" width="214" height="96"/>
+                            <rect key="frame" x="0.0" y="737" width="214" height="90"/>
                             <subviews>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pnu-QS-7YF">
-                                    <rect key="frame" x="0.0" y="0.0" width="214" height="38"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="214" height="35"/>
                                     <subviews>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="11w-Jv-TLw">
-                                            <rect key="frame" x="2" y="2" width="210" height="34"/>
+                                            <rect key="frame" x="2" y="2" width="210" height="31"/>
                                             <subviews>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rIE-cm-VcA" customClass="BaseButton" customModule="Share_Beauty_App" customModuleProvider="target">
-                                                    <rect key="frame" x="0.0" y="0.0" width="210" height="34"/>
-                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="210" height="31"/>
+                                                    <fontDescription key="fontDescription" name="Reader" family="Reader" pointSize="15"/>
                                                     <inset key="contentEdgeInsets" minX="10" minY="8" maxX="0.0" maxY="8"/>
                                                     <state key="normal">
                                                         <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -86,14 +91,14 @@
                                     </variation>
                                 </view>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="w9a-qH-dmm">
-                                    <rect key="frame" x="0.0" y="58" width="214" height="38"/>
+                                    <rect key="frame" x="0.0" y="55" width="214" height="35"/>
                                     <subviews>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zXv-dr-Yka">
-                                            <rect key="frame" x="2" y="2" width="210" height="34"/>
+                                            <rect key="frame" x="2" y="2" width="210" height="31"/>
                                             <subviews>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="APv-jQ-FYc" customClass="BaseButton" customModule="Share_Beauty_App" customModuleProvider="target">
-                                                    <rect key="frame" x="0.0" y="0.0" width="210" height="34"/>
-                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="210" height="31"/>
+                                                    <fontDescription key="fontDescription" name="Reader" family="Reader" pointSize="15"/>
                                                     <inset key="contentEdgeInsets" minX="10" minY="8" maxX="0.0" maxY="8"/>
                                                     <state key="normal">
                                                         <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -141,14 +146,14 @@
                             </constraints>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Rnx-bS-g3e">
-                            <rect key="frame" x="0.0" y="710" width="214" height="1"/>
+                            <rect key="frame" x="0.0" y="716" width="214" height="1"/>
                             <color key="backgroundColor" red="0.66666666666666663" green="0.66666666666666663" blue="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="1" id="o3D-et-izO"/>
                             </constraints>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9yB-Np-cJf">
-                            <rect key="frame" x="0.0" y="101.5" width="214" height="608.5"/>
+                            <rect key="frame" x="0.0" y="101.5" width="214" height="614.5"/>
                             <subviews>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Nq4-bz-Yqx">
                                     <rect key="frame" x="0.0" y="0.0" width="214" height="42"/>
@@ -254,7 +259,7 @@
                                     </connections>
                                 </button>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5I5-Kb-e4X">
-                                    <rect key="frame" x="0.0" y="374" width="64" height="28"/>
+                                    <rect key="frame" x="0.0" y="374" width="63" height="28"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                     <state key="normal" title="Moisturize">
                                         <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -274,7 +279,7 @@
                                     </connections>
                                 </button>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Bky-Yw-Fp2">
-                                    <rect key="frame" x="0.0" y="434" width="139" height="28"/>
+                                    <rect key="frame" x="0.0" y="434" width="140" height="28"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                     <state key="normal" title="Beauty Tips (Asia only)">
                                         <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
